--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,4 +1,5 @@
 {
+  "suggest.noselect": true,
   "coc.preferences.formatOnSaveFiletypes": ["*"],
   "coc.preferences.formatOnType": true,
   // eslint
