--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 vimrc.symlink linguist-language=vim
 zshrc.symlink linguist-language=shell
-tmux.conf.symlink linguist-language=tmux
+tmux.conf.symlink linguist-language=shell
 gitconfig.symlink linguist-language=gitconfig
