fix poet-v for vi usage

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -24,7 +24,5 @@
     "${workspaceFolder}/pyproject.toml"
   ],
   // lua
-  "Lua.diagnostics.globals": ["vim"],
-  // spell check
-  "cSpell.enabled": false
+  "Lua.diagnostics.globals": ["vim"]
 }
