--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,9 +29,7 @@ bind r source ~/.tmux.conf \; display-message "tmux.conf reloaded."
 set -g set-titles on
 set -g set-titles-string '#S:#I.#P #W'
 
-
-
-#### Mouse stuff
+#### Mouse
 set -g mouse on
 
 #### Automatically renumber window numbers on closing a pane (tmux >= 1.7).
@@ -43,32 +41,13 @@ set -g pane-base-index 1
 
 #### history
 set-option -g history-limit 50000
+
 #### Other misc. options
 # set -g visual-bell on
 set -s escape-time 0 # For vim < http://unix.stackexchange.com/a/25638/9580 >
 
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
-bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
-bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
-bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
-
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
-
 # Add alternate binding for native readline's C-l (uses tmux prefix),
-# since the vim-tmux-navigator bindings above override the default
+# since the vim-tmux-navigator bindings override the default
 bind C-l send-keys 'C-l'
 
 #### Change windows with A-(h/l)
@@ -98,6 +77,7 @@ bind C-v paste-buffer
 
 #### Clear scrollback buffer
 bind C-k send-keys -R \; clear-history
+
 ############### Status bar
 bind s set status # Toggles the status bar
 
@@ -113,17 +93,21 @@ set-option -ag status-left "#[fg=yellow]  session: #[fg=yellow,bold]#S #[default
 set-option -g status-right-length 500
 set-option -g status-right "Docker:#(pgrep -xq docker; [[ $? == 0 ]] && echo 'on' || echo 'off') "
 set-option -ag status-right "VPN:#([[ $MY_VPN_IP == $(curl ifconfig.me/ip) ]] && echo 'on' || echo 'off') "
-set-option -ag status-right "#[fg=green,bg=default]#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --averages-count 0) #[default]"
+set-option -ag status-right "#[fg=green,bg=default]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --averages-count 0 --interval 5) #[default]"
 set-option -ag status-right "#[fg=green,bold]#(pmset -g batt | tail -1 | awk '{print $3}' | tr -d ';') #[default]"
 set-option -ag status-right "#[fg=red,dim,bright,bg=default]#(uptime | cut -f 4-6 -d ' ' | cut -f 1 -d ',') "
 set-option -ag status-right " #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue,bright]%Y-%m-%d"
 set-window-option -g window-status-style fg=colour244
 set-window-option -g window-status-current-style fg=colour166,bold
 set-window-option -ga window-status-activity-style bg=colour255,fg=colour235
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'thewtex/tmux-mem-cpu-load'
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
-run '~/.tmux/plugins/tpm/tpm'
+run '$HOME/.tmux/plugins/tpm/tpm'
 
