custom debugger attach mapping, cleanup

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,15 +44,11 @@ set-option -g history-limit 50000
 
 #### Other misc. options
 # set -g visual-bell on
-set -s escape-time 0 # For vim < http://unix.stackexchange.com/a/25638/9580 >
+set -s escape-time 0 # For vim (http://unix.stackexchange.com/a/25638/9580)
 
 # Add alternate binding for native readline's C-l (uses tmux prefix),
 # since the vim-tmux-navigator bindings override the default
 bind C-l send-keys 'C-l'
-
-#### Change windows with A-(h/l)
-bind-key -n '¬' next-window
-bind-key -n '˙' previous-window
 
 #### Vi mode
 setw -g mode-keys vi
@@ -68,8 +64,7 @@ bind -T copy-mode-vi y send -X copy-selection
 unbind -T copy-mode-vi Enter
 bind -T copy-mode-vi Enter send -X copy-selection
 bind -T copy-mode-vi C-v send -X rectangle-toggle
-# In copy mode, use [prefix]+V to select the entire line
-# Found at < http://superuser.com/a/743904/64392 >
+# In copy mode, use [prefix]+V to select the entire line (http://superuser.com/a/743904/64392)
 bind V send-keys "0v\$"
 
 # Buffer pasting
