--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,7 +19,7 @@ bind h previous-window
 bind q killp
 
 #### Easy reload of tmux configuration
-bind r source ~/.tmux.conf \; display-message "tmux.conf reloaded."
+bind r source $HOME/.tmux.conf \; display-message "tmux.conf reloaded."
 
 #### Notify of non-focused window activities
 # setw -g monitor-activity on
