update nvim plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,6 @@
 set -g default-terminal "xterm-256color"
 # Apply Tc
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-
 setw -g xterm-keys on
 
 unbind C-b
@@ -24,6 +23,7 @@ bind r source $HOME/.tmux.conf \; display-message "tmux.conf reloaded."
 #### Notify of non-focused window activities
 # setw -g monitor-activity on
 # set -g visual-activity on
+# set -g visual-bell on
 
 #### Terminal emulator window title
 set -g set-titles on
@@ -43,12 +43,13 @@ set -g pane-base-index 1
 set-option -g history-limit 50000
 
 #### Other misc. options
-# set -g visual-bell on
 set -s escape-time 0 # For vim (http://unix.stackexchange.com/a/25638/9580)
 
 # Add alternate binding for native readline's C-l (uses tmux prefix),
 # since the vim-tmux-navigator bindings override the default
 bind C-l send-keys 'C-l'
+#### Clear scrollback buffer
+bind C-k send-keys -R \; clear-history
 
 #### Vi mode
 setw -g mode-keys vi
@@ -70,36 +71,27 @@ bind V send-keys "0v\$"
 # Buffer pasting
 bind C-v paste-buffer
 
-#### Clear scrollback buffer
-bind C-k send-keys -R \; clear-history
-
 ############### Status bar
 bind s set status # Toggles the status bar
 
 set-option -g status on
 set-option -g status-interval 5
-set-option -g status-justify centre
 set-option -g status-keys vi
-set-option -g status-position bottom
-set-option -g status-style fg=colour136,bg=colour235
-set-option -g status-left-length 50
-set-option -g status-left "#[fg=green]#H #[fg=green]• #[fg=green]#(uname)-#(uname -r)#[default]"
-set-option -ag status-left "#[fg=yellow]  session: #[fg=yellow,bold]#S #[default]"
-set-option -g status-right-length 500
-set-option -g status-right "Docker:#(pgrep -xq docker; [[ $? == 0 ]] && echo 'on' || echo 'off') "
-set-option -ag status-right "VPN:#([[ $MY_VPN_IP == $(curl ifconfig.me/ip) ]] && echo 'on' || echo 'off') "
-set-option -ag status-right "#[fg=green,bg=default]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --averages-count 0 --interval 5) #[default]"
-set-option -ag status-right "#[fg=green,bold]#(pmset -g batt | tail -1 | awk '{print $3}' | tr -d ';') #[default]"
-set-option -ag status-right "#[fg=red,dim,bright,bg=default]#(uptime | cut -f 4-6 -d ' ' | cut -f 1 -d ',') "
-set-option -ag status-right " #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue,bright]%Y-%m-%d"
-set-window-option -g window-status-style fg=colour244
-set-window-option -g window-status-current-style fg=colour166,bold
-set-window-option -ga window-status-activity-style bg=colour255,fg=colour235
+set-option -g status-left " #[fg=green,bold][#S]  "
+set-option -g window-status-separator "#[fg=colour246] | "
+set-option -g window-status-current-format "[#I]#W"
+set-option -g window-status-format "#[fg=colour246][#I]#W"
+set-option -g status-right "#(pgrep -xq docker; [[ $? == 0 ]] && echo '[docker] ')" # is docker on
+set-option -ag status-right "#([[ $my_vpn_ip == $(curl ifconfig.me/ip) ]] && echo '[vpn] ')" # is vpn on
+set-option -ag status-right "#[fg=green,bold]#(pmset -g batt | tail -1 | awk '{print $3}' | tr -d ';') "
+set-option -ag status-right "#[fg=colour39]%a %T %D "
+# style
+set-option -g status-style bg=colour235
+set-option -g window-status-current-style fg=colour39 #,bg=colour234
+# set-option -g window-status-style fg=colour246
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 set -g @plugin 'christoomey/vim-tmux-navigator'
