--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,6 +45,23 @@ set-option -g history-limit 50000
 #### Other misc. options
 set -s escape-time 0 # For vim (http://unix.stackexchange.com/a/25638/9580)
 
+# Smart pane switching with awareness of `$forward_programs`
+# See: https://github.com/christoomey/vim-tmux-navigator
+forward_programs="view|n?vim?|fzf"
+should_forward="ps -o state= -o comm= -t '#{pane_tty}' \
+  | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?($forward_programs)(diff)?$'"
+
+bind-key -n 'C-h' if-shell "$should_forward" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-j' if-shell "$should_forward" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-k' if-shell "$should_forward" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-l' if-shell "$should_forward" 'send-keys C-l'  'select-pane -R'
+
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$should_forward\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$should_forward\" 'send-keys C-\\\\'  'select-pane -l'"
+
 # Add alternate binding for native readline's C-l (uses tmux prefix),
 # since the vim-tmux-navigator bindings override the default
 bind C-l send-keys 'C-l'
@@ -87,14 +104,4 @@ set-option -ag status-right "#[fg=green,bold]#(pmset -g batt | tail -1 | awk '{p
 set-option -ag status-right "#[fg=colour39]%a %T %D "
 # style
 set-option -g status-style bg=colour235
-set-option -g window-status-current-style fg=colour39 #,bg=colour234
-# set-option -g window-status-style fg=colour246
-
-# Plugins
-set -g @plugin 'tmux-plugins/tpm'
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
-set -g @plugin 'christoomey/vim-tmux-navigator'
-
-run '$HOME/.tmux/plugins/tpm/tpm'
-
+set-option -g window-status-current-style fg=colour39
