tmux allow focus events

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,7 @@ bind r source $HOME/.tmux.conf \; display-message "tmux.conf reloaded."
 # setw -g monitor-activity on
 # set -g visual-activity on
 # set -g visual-bell on
+set -g focus-events on
 
 #### Terminal emulator window title
 set -g set-titles on
