upgrade nvim 0.10 fixes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,27 +67,28 @@ if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
 # since the vim-tmux-navigator bindings override the default
 bind C-l send-keys 'C-l'
 #### Clear scrollback buffer
-bind C-k send-keys -R \; clear-history
+bind C-k send-keys -R 'C-l' \; clear-history
+
 
 #### Vi mode
 setw -g mode-keys vi
 
 # # Copy mode
 unbind [
-bind v copy-mode
 unbind ]
+unbind -T copy-mode-vi Enter
+
+bind v copy-mode
 bind -T copy-mode-vi L send -X end-of-line
 bind -T copy-mode-vi H send -X start-of-line
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send -X copy-selection
-unbind -T copy-mode-vi Enter
-bind -T copy-mode-vi Enter send -X copy-selection
-bind -T copy-mode-vi C-v send -X rectangle-toggle
 # In copy mode, use [prefix]+V to select the entire line (http://superuser.com/a/743904/64392)
-bind V send-keys "0v\$"
-
-# Buffer pasting
-bind C-v paste-buffer
+bind -T copy-mode-vi V send-keys "0v\$"
+bind -T copy-mode-vi C-v send -X rectangle-toggle
+bind -T copy-mode-vi M-o send-keys -X select-line \; \
+    send-keys -X copy-pipe-and-cancel \; \
+    run-shell "$SHELL -c 'open_url \"$(tmux show-buffer)\"'"
 
 ############### Status bar
 bind s set status # Toggles the status bar
