--- a/.tmux.conf
+++ b/.tmux.conf
@@ -100,7 +100,7 @@ set-option -g status-left " #[fg=green,bold][#S]  "
 set-option -g window-status-separator "#[fg=colour246] | "
 set-option -g window-status-current-format "[#I]#W"
 set-option -g window-status-format "#[fg=colour246][#I]#W"
-set-option -g status-right "#(pgrep -xq docker; [[ $? == 0 ]] && echo '[docker] ')" # is docker on
+set-option -g status-right "#(colima status; [[ $? == 0 ]] && echo '[docker] ')" # is docker on
 set-option -ag status-right "#([[ $my_vpn_ip == $(curl ifconfig.me/ip) ]] && echo '[vpn] ')" # is vpn on
 set-option -ag status-right "#[fg=green,bold]#(pmset -g batt | tail -1 | awk '{print $3}' | tr -d ';') "
 set-option -ag status-right "#[fg=colour39]%a %T %D "
