add conda for AI-ML work, fix tmux jumps in copy mode, minor completion updates

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -90,6 +90,12 @@ bind -T copy-mode-vi M-o send-keys -X select-line \; \
     send-keys -X copy-pipe-and-cancel \; \
     run-shell "$SHELL -c 'open_url \"$(tmux show-buffer)\"'"
 
+bind -T copy-mode-vi C-h select-pane -L
+bind -T copy-mode-vi C-j select-pane -D
+bind -T copy-mode-vi C-k select-pane -U
+bind -T copy-mode-vi C-l select-pane -R
+
+
 ############### Status bar
 bind s set status # Toggles the status bar
 
@@ -101,9 +107,9 @@ set-option -g window-status-separator "#[fg=colour246] | "
 set-option -g window-status-current-format "[#I]#W"
 set-option -g window-status-format "#[fg=colour246][#I]#W"
 set-option -g status-right "#(colima status; [[ $? == 0 ]] && echo '[docker] ')" # is docker on
-set-option -ag status-right "#([[ $my_vpn_ip == $(curl ifconfig.me/ip) ]] && echo '[vpn] ')" # is vpn on
+set-option -ag status-right "#([[ $MY_VPN_IP == $(curl -s ifconfig.me/ip) ]] && echo '[vpn] ')" # is vpn on
 set-option -ag status-right "#[fg=green,bold]#(pmset -g batt | tail -1 | awk '{print $3}' | tr -d ';') "
-set-option -ag status-right "#[fg=colour39]%a %T %D "
+set-option -ag status-right "#[fg=colour39]%a %H:%M %m/%d/%y "
 # style
 set-option -g status-style bg=colour235
 set-option -g window-status-current-style fg=colour39
